--- a/src/Map/Map.css
+++ b/src/Map/Map.css
@@ -1,3 +1,10 @@
 .map {
-  margin-bottom: 30px;
+  margin-bottom: 70px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.map__title {
+  margin: 0;
+  font-weight: 100;
+  background-color: #ccc;
 }
